src/test/ui/borrowck/borrowck-borrowed-uniq-rvalue.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-borrowed-uniq-rvalue.rs:10:28
   |
LL |     buggy_map.insert(42, &*Box::new(1));
   |                            ^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |                            |
   |                            creates a temporary which is freed while still in use
...
LL |     buggy_map.insert(43, &*tmp);
   |     --------- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
